Fixed crash plugin crash if version not supported